syntax = "proto3";

package question;

import "google/protobuf/timestamp.proto";

option go_package = "proto/question";

message Question {
    int32 id = 1;
    int32 post_id = 2;
    string question = 3;
    google.protobuf.Timestamp created_at = 4;     
    google.protobuf.Timestamp updated_at = 5;  
}

message CreateQuestionRequest {
    int32 post_id = 1;
    string question = 2;
}

message CreateQuestionResponse {
    Question question = 1;
}

message FindQuestionByIDRequest {
    int32 id = 1;
}

message FindQuestionByIDResponse {
    Question question = 1;
}

message FindAllQuestionsRequest {}

message FindAllQuestionsResponse {
    repeated Question questions = 1;
}

message FindAllQuestionsByPostIDRequest {
    int32 post_id = 1;
}

message FindAllQuestionsByPostIDResponse {
    repeated Question questions = 1;
}

message PatchQuestionRequest {
    int32 id = 1;
    int32 post_id = 2;
    string question = 3;
}

message PatchQuestionResponse {
    Question question = 1;
}

message DeleteQuestionRequest {
    int32 id = 1;
}

message DeleteQuestionResponse {
    string message = 1;
}

service QuestionService {
    rpc CreateQuestion(CreateQuestionRequest) returns (CreateQuestionResponse);
    rpc FindQuestionByID(FindQuestionByIDRequest) returns (FindQuestionByIDResponse);
    rpc FindAllQuestions(FindAllQuestionsRequest) returns (FindAllQuestionsResponse);
    rpc FindAllQuestionsByPostID(FindAllQuestionsByPostIDRequest) returns (FindAllQuestionsByPostIDResponse);
    rpc PatchQuestion(PatchQuestionRequest) returns (PatchQuestionResponse);
    rpc DeleteQuestion(DeleteQuestionRequest) returns (DeleteQuestionResponse);
}
